--- a/views/index.haml
+++ b/views/index.haml
@@ -38,7 +38,7 @@
               //height: "300px",
               //layout: "box",
               start: new Date(),
-              end: new Date(1000*60*60*24 + (new Date()).valueOf()),
+              end: new Date(1000*60*60*24*90 + (new Date()).valueOf()),
               editable: true,
               animate: false,
               eventMargin: 10,  // minimal margin between events
