--- a/views/index.haml
+++ b/views/index.haml
@@ -37,7 +37,7 @@
               //minHeight: 50, // pixels
               //height: "300px",
               //layout: "box",
-              start: new Date(),
+              start: new Date("01-01-2014"),
               end: new Date(1000*60*60*24*90 + (new Date()).valueOf()),
               editable: true,
               animate: false,
