--- a/views/index.haml
+++ b/views/index.haml
@@ -65,8 +65,11 @@
 
             selected = timeline.getSelection()[0];
             myepic = timeline.data[selected.row];
+
+            jira_description = myepic.jira_description;
+            if(jira_description == null) { jira_description = "" }  else { jira_description = jira_description; }
           
-            $('#info').html('<table><tr><td colspan="2"><h3>' + myepic.content + '</h3></td><tr><td><i>JIRA Link:</i></td><td><a href="' + myepic.jira_uri + '">' + myepic.jira_uri + '</a></td></tr><tr><td><i>Start:</i></td><td>' + myepic.start.toLocaleDateString() + '</td></tr><tr><td><i>End:</i></td><td>' + myepic.end.toLocaleDateString() + '</td></tr></table>');
+            $('#info').html('<table style="border: 1px solid black; padding: 5px;"><tr><td colspan="2"><h3>' + myepic.content + '</h3></td><tr><td width="100px"><i>JIRA Link:</i></td><td><a href="' + myepic.jira_uri + '">' + myepic.jira_uri + '</a></td></tr><tr><td><i>Start:</i></td><td>' + myepic.start.toLocaleDateString() + '</td></tr><tr><td><i>End:</i></td><td>' + myepic.end.toLocaleDateString() + '</td></tr><tr><td colspan="2">' + jira_description + '</td</tr></table>');
 
           }
         );
@@ -114,10 +117,10 @@
               'group': jiras[i]["group"],
               'start': new Date(jiras[i]["start"]),
               'end': new Date(jiras[i]["end"]),
-              'jira_uri': jiras[i]["jira_uri"]
+              'jira_uri': jiras[i]["jira_uri"],
+              'jira_description': jiras[i]["jira_description"]
           });
         }
-       
 
       }
 
