--- a/public/timeline/timeline.css
+++ b/public/timeline/timeline.css
@@ -238,5 +238,29 @@ div.overlaytyler {
   background-color: #d5ddf6;;
 }
 
+#jira_info {
+  width: 20%;
+  position: fixed;
+  top: 40px;
+  left: 0;
+  overflow: hidden;
+  pointer-events: none;
+  z-index: 10;
+  visibility: hidden;
+}
+
+.clickable, .close_box {
+  pointer-events: all;
+}
+
+.close_box {
+  cursor:pointer;
+  padding:0px;
+  position:absolute;
+  right: 0;
+  border:solid black 3px;
+  color: #ffffff;
+  background-color: #000000;
+}
 
 
