--- a/views/index.haml
+++ b/views/index.haml
@@ -12,6 +12,11 @@
           font: 10pt arial;
       }
     :javascript
+
+      $(document).on('click','.close_box',function(){
+        $('#jira_info').css("visibility", "hidden");
+      });
+
       var timeline = null;
       var data = [];
 
@@ -68,8 +73,12 @@
 
             jira_description = myepic.jira_description;
             if(jira_description == null) { jira_description = "" }  else { jira_description = jira_description; }
+
+            console.log("jira: " + myepic.content);
           
-            $('#info').html('<table style="border: 1px solid black; padding: 5px;"><tr><td colspan="2"><h3>' + myepic.content + '</h3></td><tr><td width="100px"><i>JIRA Link:</i></td><td><a href="' + myepic.jira_uri + '">' + myepic.jira_uri + '</a></td></tr><tr><td><i>Start:</i></td><td>' + myepic.start.toLocaleDateString() + '</td></tr><tr><td><i>End:</i></td><td>' + myepic.end.toLocaleDateString() + '</td></tr><tr><td>Scrum Team:</td><td>' + myepic.scrum_team + '</td></tr><tr><td colspan="2">' + jira_description + '</td</tr></table>');
+            $('#jira_info').html('<div class="close_box">X</div><table style="border: 1px solid black; padding: 5px; width: 100%;"><tr><td colspan="2"><h3>' + myepic.content + '</h3></td></tr><tr><td width="100px"><i>JIRA Link:</i></td><td><a class="clickable" href="' + myepic.jira_uri + '">' + myepic.jira_key + '</a></td></tr><tr><td><i>Start:</i></td><td>' + myepic.start.toLocaleDateString() + '</td></tr><tr><td><i>End:</i></td><td>' + myepic.end.toLocaleDateString() + '</td></tr><tr><td>Scrum Team:</td><td>' + myepic.scrum_team + '</td></tr><tr><td>Source:</td><td>' + myepic.source + '</td></tr><tr><td colspan="2">' + jira_description + '</td</tr></table>');
+            $('#jira_info').css("visibility", "visible");
+            $('#jira_info').css("background-color", "#ffffff");
 
           }
         );
@@ -119,14 +128,21 @@
               'start': new Date(jiras[i]["start"]),
               'end': new Date(jiras[i]["end"]),
               'jira_uri': jiras[i]["jira_uri"],
+              'jira_key': jiras[i]["jira_key"],
               'jira_description': jiras[i]["jira_description"],
-              'className': jiras[i]["scrum_team"],
-              'tag': jiras[i]["scrum_team"]
+              'className': jiras[i]["scrum_team_css"],
+              'tag': jiras[i]["scrum_team"],
+              'source': jiras[i]["source"]
           });
         }
 
       }
 
   %body{onresize: "/*timeline.checkResize();*/"}
+    %form{:action => '', :method => 'get'}
+      %select{ :name => "group" }
+        %option{:value => "scrum_team"}= "Scrum Team"
+        %option{:value => "roadmap_source"}= "Roadmap Source"  
+      %input{:type => "submit", :value => "Send", :class => "button"}
     #mytimeline
-    #info
+    #jira_info
