--- a/public/timeline/timeline.css
+++ b/public/timeline/timeline.css
@@ -239,14 +239,16 @@ div.overlaytyler {
 }
 
 #jira_info {
-  width: 20%;
+  width: 30%;
   position: fixed;
-  top: 40px;
+  top: 0;
   left: 0;
   overflow: hidden;
   pointer-events: none;
   z-index: 10;
   visibility: hidden;
+  padding: 3px;
+  border: solid black 1px;
 }
 
 .clickable, .close_box {
@@ -254,11 +256,12 @@ div.overlaytyler {
 }
 
 .close_box {
-  cursor:pointer;
-  padding:0px;
+  cursor: pointer;
+  padding: 0px;
   position:absolute;
+  top: 0;
   right: 0;
-  border:solid black 3px;
+  border: solid black 3px;
   color: #ffffff;
   background-color: #000000;
 }
