Add in support for showing the priority of the tickets displayed. Also show the story points if it is defined. This will help us when we are in weekly release planning and what can shift.

--- a/public/timeline/timeline.css
+++ b/public/timeline/timeline.css
@@ -266,4 +266,10 @@ div.overlaytyler {
   background-color: #000000;
 }
 
-
+.storypoints {
+  background-color: #333333;
+  color: #ffff00;
+  border: solid black 1px;
+  padding: 1px;
+  font-weight: bold;
+}
