--- a/views/index.haml
+++ b/views/index.haml
@@ -58,6 +58,7 @@
           snapEvents: true,
           dragAreaWidth: 20,
           zoomable: false,
+          customStackOrder: function(a,b) { return (b.points - a.points) }
           //groupsWidth : "100px",
           //groupsOnRight: true
         };
@@ -82,7 +83,7 @@
 
             console.log("jira: " + myepic.content);
           
-            $('#jira_info').html('<div class="close_box">X</div><table style="width: 100%;"><tr><td colspan="2"><div style="font-size: large; font-weight: bold;">' + myepic.content + '</div></td></tr><tr><td width="100px"><i>JIRA Link:</i></td><td><a class="clickable" href="' + myepic.jira_uri + '">' + myepic.jira_key + '</a></td></tr><tr><td><i>Start:</i></td><td>' + myepic.start.toLocaleDateString() + '</td></tr><tr><td><i>End:</i></td><td>' + myepic.end.toLocaleDateString() + '</td></tr><tr><td>Scrum Team:</td><td>' + myepic.scrum_team + '</td></tr><tr><td>Source:</td><td>' + myepic.source + '</td></tr><tr><td colspan="2">' + jira_description + '</td</tr></table>');
+            $('#jira_info').html('<div class="close_box">X</div><table style="width: 100%;"><tr><td colspan="2"><div style="font-size: large; font-weight: bold;">' + myepic.orig_content + '</div></td></tr><tr><td width="100px"><i>JIRA Link:</i></td><td><a class="clickable" href="' + myepic.jira_uri + '">' + myepic.jira_key + '</a></td></tr><tr><td><i>Start:</i></td><td>' + myepic.start.toLocaleDateString() + '</td></tr><tr><td><i>End:</i></td><td>' + myepic.end.toLocaleDateString() + '</td></tr><tr><td>Scrum Team:</td><td>' + myepic.scrum_team + '</td></tr><tr><td>Source:</td><td>' + myepic.source + '</td></tr><tr><td colspan="2">' + jira_description + '</td</tr></table>');
             $('#jira_info').css("visibility", "visible");
             $('#jira_info').css("background-color", "#ffffff");
 
@@ -127,8 +128,20 @@
 
         for (var i = 0; i < jiras.length; i++) 
         {
+          var content = jiras[i]["content"];
+
+          //console.log(jiras[i]);
+          
+          if(jiras[i]["points"] > 0) {
+            content = "<span class=\"storypoints\">" + jiras[i]["points"] + "</span> " + content;
+          }
+
+          if(jiras[i]["priority"] && jiras[i]["priority"].length > 0) {
+            content = "<img src=\"" + jiras[i]["priorityImage"] + "\">" + content;
+          }
+
           data.push({
-              'content': jiras[i]["content"],
+              'content': content,
               'group': jiras[i]["group"],
               'scrum_team': jiras[i]["scrum_team"],
               'start': new Date(jiras[i]["start"]),
@@ -138,6 +151,8 @@
               'jira_description': jiras[i]["jira_description"],
               'className': jiras[i]["scrum_team_css"],
               'tag': jiras[i]["scrum_team"],
+              'orig_content': jiras[i]["content"],
+              'points': jiras[i]["points"],
               'source': jiras[i]["source"]
           });
         }
