Add support for another project (operations planning)

--- a/views/index.haml
+++ b/views/index.haml
@@ -164,6 +164,10 @@
       %select{ :name => "group" }
         %option{:value => "scrum_team"}= "Scrum Team"
         %option{:value => "roadmap_source"}= "Roadmap Source"  
+      %select{ :name => "project" }
+        %option{:value => "pm"}= "Product Roadmap"
+        %option{:value => "plan"}= "Ops Roadmap"
       %input{:type => "submit", :value => "Send", :class => "button"}
+    #mytimeline
     #mytimeline
     #jira_info
