Add css for Ops teams, fixed a NPE on the priority for Epics in the CM project.

--- a/public/timeline/timeline.css
+++ b/public/timeline/timeline.css
@@ -235,7 +235,11 @@ div.configmgmtbenj {
 }
 
 div.overlaytyler {
-  background-color: #d5ddf6;;
+  background-color: #d5ddf6;
+}
+
+div.opsteamacolinlawrence {
+  background-color: #D1D1FF;
 }
 
 #jira_info {
