Update color for John's scrum team

--- a/public/timeline/timeline.css
+++ b/public/timeline/timeline.css
@@ -242,6 +242,10 @@ div.opsteamacolinlawrence {
   background-color: #D1D1FF;
 }
 
+div.opsteambjohnbronson {
+  background-color: #FFADAD;
+}
+
 #jira_info {
   width: 30%;
   position: fixed;
