Update CSS when Jim changes the scrum team names by one char

--- a/public/timeline/timeline.css
+++ b/public/timeline/timeline.css
@@ -214,7 +214,7 @@ div.ensrick {
   background-color: #FF9999;
 }
 
-div.evolutionbeno {
+div.evolutioned {
   background-color: #FFD699;
 }
 
@@ -222,7 +222,7 @@ div.alertingchad {
   background-color: #E6FF99;
 }
 
-div.deliverabilitybrian, div.teambadinabrian {
+div.deliverybrian, div.teambadinabrian {
   background-color: #66FF66;
 }
 
