Jim is color blind

--- a/public/timeline/timeline.css
+++ b/public/timeline/timeline.css
@@ -239,7 +239,7 @@ div.overlaytyler {
 }
 
 div.apisbeno {
-  background-color: #D1D1FF;
+  background-color: #FFADAD;
 }
 
 div.opsteamacolinlawrence {
