Jim keeps updating the scrum teams

--- a/public/timeline/timeline.css
+++ b/public/timeline/timeline.css
@@ -210,11 +210,11 @@ div.timeline-navigation-move-right {
     background: url('img/16/moveright.png') no-repeat center;
 }
 
-div.ensrick {
+div.ensrickjoe {
   background-color: #FF9999;
 }
 
-div.evolutioned {
+div.evolutionedjoe {
   background-color: #FFD699;
 }
 
@@ -222,11 +222,11 @@ div.alertingchad {
   background-color: #E6FF99;
 }
 
-div.deliverybrian, div.teambadinabrian {
+div.deliverybrianaddie {
   background-color: #66FF66;
 }
 
-div.csmjamess {
+div.csmjamessadina {
   background-color: #E6CCFF;
 }
 
@@ -234,11 +234,11 @@ div.configmgmtbenj {
   background-color: #99FFEB;
 }
 
-div.overlaytyler {
+div.overlaytyleraddie {
   background-color: #d5ddf6;
 }
 
-div.apisbeno {
+div.apisbenoadina {
   background-color: #FFADAD;
 }
 
