Update CSS for Scrum Team changes

--- a/public/timeline/timeline.css
+++ b/public/timeline/timeline.css
@@ -247,8 +247,12 @@ div.opsteamacolinlawrence {
   background-color: #D1D1FF;
 }
 
-div.opsteambjohnbronson {
+div.opsteambjohnadam {
   background-color: #FFADAD;
+}
+
+div.dba {
+  background-color: #FFD699;
 }
 
 #jira_info {
