Change product scrum team color

--- a/public/timeline/timeline.css
+++ b/public/timeline/timeline.css
@@ -255,6 +255,10 @@ div.dba {
   background-color: #FFD699;
 }
 
+div.roadmappmsonly {
+  background-color: #B5E9F5;
+}
+
 #jira_info {
   width: 30%;
   position: fixed;
