colors and sort order

--- a/public/timeline/timeline.css
+++ b/public/timeline/timeline.css
@@ -215,7 +215,7 @@ div.ensrickjoe {
   background-color: #FF9999;
 }
 
-div.evooverlayedjoe {
+div.evooverlayedadina {
   background-color: #d5ddf6;
 }
 
@@ -235,11 +235,11 @@ div.configmgmtbenj {
   background-color: #99FFEB;
 }
 
-div.analyticsbillyjim {
+div.segmentationbillybryce {
   background-color: #FFD699;
 }
 
-div.apisbenoadina {
+div.apisbenojoe {
   background-color: #FFADAD;
 }
 
